unpackaged/main/default/objects/Opportunity/fields/ucinn_ascendv2__Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Conversion_Rate__c</fullName>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>