unpackaged/main/default/objects/Opportunity/fields/ucinn_ascendv2__Operating_Entity_Amount_Paid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity_Amount_Paid_to_Date__c</fullName>
    <label>Operating Entity Amount Paid to Date</label>
    <summarizedField>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Operating_Entity_Amount_Paid_to_Date__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>