unpackaged/main/default/objects/Opportunity/fields/ucinn_ascendv2__Remaining_Transaction_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Remaining_Transaction_Amount_Due__c</fullName>
    <formula>IF((RecordType.DeveloperName == 'Recurring_Gift'), 0.00,
IF(ISPICKVAL(StageName, "Written Off") || ISPICKVAL(StageName, "Cancelled") || ISPICKVAL(StageName, "Void"), 0.00, IF(ucinn_ascendv2__Transaction_Amount__c -  ucinn_ascendv2__Transaction_Amount_Paid_to_Date_Roll_Up__c &gt; 0, ucinn_ascendv2__Transaction_Amount__c - ucinn_ascendv2__Transaction_Amount_Paid_to_Date_Roll_Up__c, 0)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Transaction Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>