unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Auto_Renewing_Membership.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Auto_Renewing_Membership</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Recurring Gift</businessProcess>
    <description>Auto Renewing Membership</description>
    <label>Auto Renewing Membership</label>
</RecordType>