unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Auto_Renewing_POS.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Auto_Renewing_POS</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Recurring Gift</businessProcess>
    <label>Auto Renewing POS</label>
</RecordType>