unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Gift.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Gift</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Gift</businessProcess>
    <description>For all Gifts</description>
    <label>Gift</label>
</RecordType>