unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Installment_Based_Membership.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Installment_Based_Membership</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Pledge</businessProcess>
    <description>Installment Based Membership</description>
    <label>Installment Based Membership</label>
</RecordType>