unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Installment_Based_POS.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Installment_Based_POS</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Pledge</businessProcess>
    <label>Installment Based POS</label>
</RecordType>