unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Matching_Gift.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Matching_Gift</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Matching Gift</businessProcess>
    <description>For all Matching Gifts</description>
    <label>Matching Gift</label>
</RecordType>