unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__One_Time_Membership.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__One_Time_Membership</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Gift</businessProcess>
    <description>One-Time Membership</description>
    <label>One-Time Membership</label>
</RecordType>