unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__One_Time_POS.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__One_Time_POS</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Gift</businessProcess>
    <label>One-Time POS</label>
</RecordType>