unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Partial_Payment_POS.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Partial_Payment_POS</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Pledge</businessProcess>
    <label>Partial Payment POS</label>
</RecordType>