unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Pledge.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Pledge</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Pledge</businessProcess>
    <description>Pledge</description>
    <label>Pledge</label>
</RecordType>