unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Proposal.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Proposal</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Proposal</businessProcess>
    <description>Proposal</description>
    <label>Proposal</label>
</RecordType>