unpackaged/main/default/objects/Opportunity/recordTypes/ucinn_ascendv2__Recurring_Gift.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Recurring_Gift</fullName>
    <active>true</active>
    <businessProcess>ucinn_ascendv2__Recurring Gift</businessProcess>
    <description>For all Recurring Gifts</description>
    <label>Recurring Gift</label>
</RecordType>